# Lean-and-Traning

./: .gitignore  README.md
check/: 1.py
couersera/cpp/: readme.txt
csharp/: test.cs
cuersera/python/: flags.py  readme.txt  solution.py  test.py
django/stepik_django/pr_1/: pyproject.toml
django/stepik_django/pr_1/myproject/: db.sqlite3
django/stepik_django/pr_1/myproject/myproject/: settings.py
miniproject/: GG_win.py  cesar.py  gg.py  guessing_game.py  hangman.py  magic_ball.py  magic_ball_tk.py  password.py  system.py
python/: Animals.py  fraction.py  input.txt  merge_sort.py  output.txt  polska.py  test  test.cpp  test2.py  test3.py  testQT.py
python/output/: test
shop2you/: EgiazarianTelegramBot.pl  Klepik01Main.pl  Klepik01MyClass.pm  TestBD.pm  WebProgTelegramClient.pm  klepik01main.pl  testbd.pl
shop2you/bot/: .env  KlepikTelegramBot.pl  KlepikTelegramClient.pl  WebProgTelegramClient.pm  id_rsa_klepik.pub  index.html  (+1 more)
wayup/: readme.txt
yandex.algorithm_3/: 10_lection.py  11_stack.cpp  13_postfix.py  14_sort_v.cpp  16_queue.cpp  17_alco.py  18_dequeue.cpp  1_gistigramma.py  20_heap.cpp  21_3to1.py  22_grasshopper.py  23_calcul.py  24_ticket.py  25_carnations.py  26_way.py  27_maxcostway.py  28_hors.py  29_caffe.py  2_beautiful_string.cpp  30_nop.py  31_graf.py  32_gsvyaz.cpp  33_cheating.py  33_chet.cpp  34.cpp  34_tsort.py  35_cycle.py  36_minlenway.py  37_minlenway2.py  38_bloha.py  39_spel.cpp  40_metro.py  5_good_string.py  6_os.py  8_min_rec.py  beautiful_string.cpp  cbs.py  diego.cpp  great_col.py  heap_sort.py  (+4 more)
(+131 files in other folders)
