[tool.poetry]
name = "pr-1"
version = "0.1.0"
description = ""
authors = ["Aleksandr Klepik <am.klepik@yandex.ru>"]
readme = "README.md"
packages = [{include = "pr_1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
